# MutomcaReader

./: .gitignore  CMakeLists.txt  README.md  b_set_config_pre.sh
run/: CMakeLists.txt  main.cpp  setConfig.sh
src/: Configuration.cpp  Configuration.h  Event.cpp  Event.h  Hit.cpp  Hit.h  HitCollection.cpp  HitCollection.h  Map.cpp  Map.h  Parameters.h  Reader.cpp  Reader.h
utils/: ChannelMapSL.txt  ChannelMapTubes.txt  config-example.ini
